@startuml

' =========================
' ENUMS
' =========================
enum UserRoles {
  Admin
  Student
  Professor
}

enum ResourcesType {
  ClassMaterial
  Submissions
  Solution
}

' =========================
' CLASSES
' =========================
class User
class Course
class Class
class Resources
class ChatMessage

' =========================
' RELATIONSHIPS
' =========================
User -- UserRoles
Resources -- ResourcesType

User -- Resources
Resources -- Course
User -- Course
Course <|-- Class
Course -- ChatMessage
User -- ChatMessage

@enduml
